code/kubes/nextcloud/k8s/namespace.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: nextcloud
  annotations:
    linkerd.io/inject: enabled
